<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_notifications">

        <SwitchPreferenceCompat
            android:key="enable_notifications"
            android:title="@string/settings_enable_notifications"
            android:summary="@string/settings_notifications_description"
            android:defaultValue="true" />

        <Preference
            android:key="notification_channels"
            android:title="Notification Channels"
            android:summary="Configure notification sound, vibration, and importance"
            android:dependency="enable_notifications">
            <intent
                android:action="android.settings.APP_NOTIFICATION_SETTINGS"
                android:targetPackage="com.ds.eventwish" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_about">

        <Preference
            android:key="app_version"
            android:title="@string/settings_version"
            android:selectable="false"
            app:summary="1.0.0" />

        <Preference
            android:key="privacy_policy"
            android:title="@string/settings_privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://eventwish.app/privacy" />
        </Preference>

        <Preference
            android:key="contact_support"
            android:title="Contact Support">
            <intent
                android:action="android.intent.action.SENDTO"
                android:data="mailto:support@eventwish.app" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen> 