<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/analytics_consent_title"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/messageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/analytics_consent_message"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/detailsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/analytics_consent_details"
        android:textAppearance="?attr/textAppearanceBody2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/messageText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/acceptButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/analytics_consent_accept"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/detailsText"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/declineButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/analytics_consent_decline"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@id/acceptButton"
        app:layout_constraintEnd_toStartOf="@id/acceptButton"
        app:layout_constraintBottom_toBottomOf="@id/acceptButton" />

</androidx.constraintlayout.widget.ConstraintLayout> 